--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file tase/pom.xml
     - name: Test
-      run: mvn -B test --file pom.xml
+      run: mvn -B test --file tase/pom.xml
