--- a/tase/pom.xml
+++ b/tase/pom.xml
@@ -34,10 +34,10 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-    <dependency>
+      <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>5.0.0</version>
+        <artifactId>mockito-inline</artifactId>
+        <version>5.1.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
