--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -1,5 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+<groupId>com.maya</groupId>
+<version>1.0</version>
   <parent>
     <groupId>com.maya</groupId>
     <artifactId>tase-multi-project</artifactId>
@@ -23,7 +25,7 @@
     <!-- JaCoCo thresholds. Increase gradually as you add tests. -->
     <jacoco.unit-tests.limit.instruction-ratio>0%</jacoco.unit-tests.limit.instruction-ratio>
     <jacoco.unit-tests.limit.branch-ratio>0%</jacoco.unit-tests.limit.branch-ratio>
-    <jacoco.unit-tests.limit.class-complexity>35</jacoco.unit-tests.limit.class-complexity>
+    <jacoco.unit-tests.limit.class-complexity>50</jacoco.unit-tests.limit.class-complexity>
     <jacoco.unit-tests.limit.method-complexity>15</jacoco.unit-tests.limit.method-complexity>
 
     </properties>
@@ -44,7 +46,7 @@
         <artifactId>junit-bom</artifactId>
         <version>${junit.version}</version>
         <type>pom</type>
-        <scope>import</scope>
+        <scope>test</scope>
       </dependency>
       <dependency>
       <groupId>org.junit.jupiter</groupId>
